--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
     implementation 'com.android.support:cardview-v7:28.0.0-rc02'
+    implementation 'com.github.varunest:sparkbutton:1.0.5'
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'de.hdodenhof:circleimageview:2.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.2.0'
     implementation 'jp.wasabeef:glide-transformations:3.0.1'
